trying to work around what seems to be an RVM bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ before_install:
   pip install --user --upgrade pip virtualenv
   virtualenv -p python$PYTHON venv
   source venv/bin/activate
+  rvm get stable  # work around rvm bug on osx
+
 install:
   - cmake similarity_search && make -j 4
   - travis_wait travis_retry pip install -r python_bindings/requirements.txt scipy six flake8
