--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,11 @@ before_install:
 - |
   if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX=g++-4.8 CC=gcc-4.8; fi
   if [ "$TRAVIS_OS_NAME" = "osx" ] && [ "${PYTHON:0:1}" = "3" ]; then
-      brew update; brew install python3;
+      brew update; brew install python3; rvm get head || true 
   fi
   pip install --user --upgrade pip virtualenv
   virtualenv -p python$PYTHON venv
   source venv/bin/activate
-  if [ "$TRAVIS_OS_NAME" = "osx" ]; then
-    rvm get stable || true
-  fi
 
 install:
   - cmake similarity_search && make -j 4
