Fixing query-server/client

--- a/query_server/cpp_client_server/makefile.with_extras
+++ b/query_server/cpp_client_server/makefile.with_extras
@@ -2,7 +2,7 @@ NON_METRIC_SPACE_LIBRARY=../../similarity_search/
 NON_METRIC_SPACE_LIBRARY_INC=$(NON_METRIC_SPACE_LIBRARY)/include
 NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/release
 
-LIBS= -lthrift -lNonMetricSpaceLib -lboost_program_options
+LIBS= -lthrift -lNonMetricSpaceLib -lgsl -lgslcblas -llshkit -lboost_program_options
 
 CXXFLAGS += -I$(NON_METRIC_SPACE_LIBRARY_INC)  -I./gen-thrift/
 # Enable C++11
