Multiple relatively minor changes.

--- a/sample_standalone_app/makefile
+++ b/sample_standalone_app/makefile
@@ -1,10 +1,16 @@
-# Set these variables if you installed the library to a non-standard location
-#NON_METRIC_SPACE_LIBRARY=/home/leo/NonMetrLibDebug
-NON_METRIC_SPACE_LIBRARY=$(HOME)/NonMetrLibRelease
+# Set these variables if you installed the library to your home directory
+#NON_METRIC_SPACE_LIBRARY=$(HOME)/NonMetrLibRelease
 NON_METRIC_SPACE_LIBRARY_INC=$(NON_METRIC_SPACE_LIBRARY)/include
 NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/lib
 
-LIB_GSL=-lgsl -lgslcblas -llshkit
+# These lines are used to build against the library built in the current directory
+NON_METRIC_SPACE_LIBRARY=../similarity_search/
+NON_METRIC_SPACE_LIBRARY_INC=$(NON_METRIC_SPACE_LIBRARY)/include
+NON_METRIC_SPACE_LIBRARY_LIB=$(NON_METRIC_SPACE_LIBRARY)/release
+
+
+# You can uncomment this, if the library was built with extras
+#LIB_GSL=-lgsl -lgslcblas -llshkit
 
 CXXFLAGS += -I$(NON_METRIC_SPACE_LIBRARY_INC) 
 # Enable C++11
