--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,11 @@ before_install:
       command curl -sSL https://rvm.io/mpapis.asc | gpg --import -;
       rvm get stable
       pip3 install --user --upgrade pip virtualenv
+      virtualenv -p python3 venv
   else
       pip install --user --upgrade pip virtualenv
+      virtualenv -p python$PYTHON venv
   fi
-  virtualenv -p python$PYTHON venv
   source venv/bin/activate
 
 install:
