--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ before_install:
       command curl -sSL https://rvm.io/mpapis.asc | gpg --import -;
       rvm get stable
       pip3 install --user --upgrade pip virtualenv
-      virtualenv -p python3 venv
+      virtualenv3 -p python$PYTHON venv
   else
       pip install --user --upgrade pip virtualenv
       virtualenv -p python$PYTHON venv
