--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ before_install:
       command curl -sSL https://rvm.io/mpapis.asc | gpg --import -;
       rvm get stable
       pip3 install --user --upgrade pip virtualenv
-      virtualenv3 -p python$PYTHON venv
-      source venv3/bin/activate
+      virtualenv -p python3 venv
+      source venv/bin/activate
   else
       pip install --user --upgrade pip virtualenv
       virtualenv -p python$PYTHON venv
