towards compiling with opencl stuff.

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -45,8 +45,13 @@ if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
     #set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Wunreachable-code -Ofast -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -pthread -fpic -march=x86-64")
     #set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Wunreachable-code -Ofast -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -pthread -fpic -march=core2")
     #set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Wunreachable-code -Ofast -lm -lrt -DNDEBUG -std=c++11 -DHAVE_CXX0X -pthread -fpic -msse4.2")
-    set (CMAKE_CXX_FLAGS_RELEASE "-Wall -Wunreachable-code -Wcast-align -Ofast -lm -lrt -DNDEBUG -std=c++11 -pthread  -DHAVE_CXX0X -march=native -Wl,--no-as-needed -fpic")
-    set (CMAKE_CXX_FLAGS_DEBUG   "-Wall -Wunreachable-code -Wcast-align -ggdb  -lm -lrt -DNDEBUG -std=c++11 -pthread  -DHAVE_CXX0X -march=native -Wl,--no-as-needed -fpic")
+    if (CMAKE_SYSTEM_NAME MATCHES Darwin)
+      set (CMAKE_CXX_FLAGS_RELEASE " -fopenmp -Wall -Wunreachable-code -Wcast-align -Ofast -lm -DNDEBUG -std=c++11 -pthread  -DHAVE_CXX0X -march=native -fpic")
+      set (CMAKE_CXX_FLAGS_DEBUG   " -fopenmp -Wall -Wunreachable-code -Wcast-align -ggdb  -lm -DNDEBUG -std=c++11 -pthread  -DHAVE_CXX0X -march=native -fpic")
+    else()
+      set (CMAKE_CXX_FLAGS_RELEASE " -fopenmp -Wall -Wunreachable-code -Wcast-align -Ofast -lm -DNDEBUG -std=c++11 -pthread -lrt  -DHAVE_CXX0X -march=native -Wl,--no-as-needed -fpic")
+      set (CMAKE_CXX_FLAGS_DEBUG   " -fopenmp -Wall -Wunreachable-code -Wcast-align -ggdb  -lm -DNDEBUG -std=c++11 -pthread -lrt  -DHAVE_CXX0X -march=native -Wl,--no-as-needed -fpic")
+    endif()
 elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
     if (CXX_COMPILER_VERSION VERSION_LESS 14.0.1)
         message(FATAL_ERROR "Intel version must be at least 14.0.1!")
