--- a/similarity_search/apps/CMakeLists.txt
+++ b/similarity_search/apps/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable (report_intr_dim                 report_intr_dim.cc)
 add_executable (test_clust                      test_clust.cc)
 add_executable (bench_projection                bench_projection.cc)
 add_executable (knn_stat                        knn_stat.cc)
+add_executable (sparse_bindata_stat             sparse_bindata_stat.cc)
 add_executable (gold_stand_stat                 gold_stand_stat.cc)
 add_executable (convert_sparse                  convert_sparse.cc)
 add_executable (check_convert_sparse            check_convert_sparse.cc)
@@ -30,6 +31,7 @@ add_dependencies (report_intr_dim     NonMetricSpaceLib)
 add_dependencies (test_clust          NonMetricSpaceLib)
 add_dependencies (bench_projection    NonMetricSpaceLib)
 add_dependencies (knn_stat            NonMetricSpaceLib)
+add_dependencies (sparse_bindata_stat NonMetricSpaceLib)
 add_dependencies (gold_stand_stat     NonMetricSpaceLib)
 add_dependencies (convert_sparse      NonMetricSpaceLib)
 add_dependencies (check_convert_sparse NonMetricSpaceLib)
@@ -49,6 +51,7 @@ target_link_libraries (report_intr_dim  NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_
 target_link_libraries (test_clust       NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (bench_projection NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (knn_stat         NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries (sparse_bindata_stat NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (gold_stand_stat  NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (convert_sparse   NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (check_convert_sparse   NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
