minor fixes + fixing parameter setting.

--- a/similarity_search/apps/CMakeLists.txt
+++ b/similarity_search/apps/CMakeLists.txt
@@ -19,7 +19,8 @@ add_executable (bench_projection                bench_projection.cc)
 add_executable (knn_stat                        knn_stat.cc)
 add_executable (sparse_bindata_stat             sparse_bindata_stat.cc)
 add_executable (gold_stand_stat                 gold_stand_stat.cc)
-add_executable (convert_sparse                  convert_sparse.cc)
+add_executable (convert_sparse_txt2bin          convert_sparse_txt2bin.cc)
+add_executable (convert_sparse_bin2txt          convert_sparse_bin2txt.cc)
 add_executable (check_convert_sparse            check_convert_sparse.cc)
 # The following line is necessary to create an executable for the dummy application:
 add_executable (dummy_app dummy_app.cc)
@@ -33,7 +34,8 @@ add_dependencies (bench_projection    NonMetricSpaceLib)
 add_dependencies (knn_stat            NonMetricSpaceLib)
 add_dependencies (sparse_bindata_stat NonMetricSpaceLib)
 add_dependencies (gold_stand_stat     NonMetricSpaceLib)
-add_dependencies (convert_sparse      NonMetricSpaceLib)
+add_dependencies (convert_sparse_txt2bin NonMetricSpaceLib)
+add_dependencies (convert_sparse_bin2txt NonMetricSpaceLib)
 add_dependencies (check_convert_sparse NonMetricSpaceLib)
 # The following line is necessary to create an executable for the dummy application:
 add_dependencies (dummy_app           NonMetricSpaceLib)
@@ -53,7 +55,8 @@ target_link_libraries (bench_projection NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_
 target_link_libraries (knn_stat         NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (sparse_bindata_stat NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (gold_stand_stat  NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries (convert_sparse   NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries (convert_sparse_txt2bin  NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries (convert_sparse_bin2txt  NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries (check_convert_sparse   NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 # The following line is necessary to create an executable for the dummy application:
 target_link_libraries (dummy_app        NonMetricSpaceLib ${LSHKIT_LIB} ${Boost_LIBRARIES} ${GSL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
