Upgrading to a new vesion of thrift.

--- a/query_server/cpp_client_server/makefile.with_extras
+++ b/query_server/cpp_client_server/makefile.with_extras
@@ -8,7 +8,7 @@ CXXFLAGS += -I$(NON_METRIC_SPACE_LIBRARY_INC)  -I./gen-thrift/
 # Enable C++11
 CXXFLAGS += -std=c++11
 # OMP flags
-CXXFLAGS += -fopenmp
+CXXFLAGS += #-fopenmp
 # Debug flags
 #CXXFLAGS += -g
 #CXXFLAGS += -g -O3
@@ -26,8 +26,8 @@ THRIFT_OBJ=$(patsubst %.cpp,%.o,$(THRIFT_SRC))
 
 # Note -pthread: this enables threads!!!
 query_server:  $(THRIFT_OBJ) QueryService_server.o gen-thrift/*.h makefile $(NON_METRIC_SPACE_LIBRARY_LIB)/libNonMetricSpaceLib.a 
-	$(CXX) -o$@  $(THRIFT_OBJ) QueryService_server.o -L/usr/local/lib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIBS) -pthread -fopenmp 
+	$(CXX) -o$@  $(THRIFT_OBJ) QueryService_server.o -L/usr/local/lib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIBS) -pthread #-fopenmp 
 
 query_client:  $(THRIFT_OBJ) QueryClient.o gen-thrift/*.h makefile $(NON_METRIC_SPACE_LIBRARY_LIB)/libNonMetricSpaceLib.a 
-	$(CXX) -o$@  $(THRIFT_OBJ) QueryClient.o -L/usr/local/lib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIBS) -pthread -fopenmp 
+	$(CXX) -o$@  $(THRIFT_OBJ) QueryClient.o -L/usr/local/lib -L$(NON_METRIC_SPACE_LIBRARY_LIB) $(LIBS) -pthread #-fopenmp 
 
