--- a/query_server/java_client/pom.xml
+++ b/query_server/java_client/pom.xml
@@ -9,6 +9,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
 
 	<dependencies>
@@ -21,7 +23,7 @@
     <dependency>
 	    <groupId>org.apache.thrift</groupId>
 	    <artifactId>libthrift</artifactId>
-	    <version>0.9.2</version>
+	    <version>0.11.0</version>
     </dependency>
 
    <dependency>
