1. Disable Win32 2. Update docs a bit more

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,8 @@ version: '{build}'
 image: Visual Studio 2015
 platform:
 - x64
-- x86
+# Disable temporarily
+#- x86
 environment:
   global:
     DISTUTILS_USE_SDK: 1
