--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,9 +24,12 @@ install:
 - ps: Remove-Item -Recurse -Force C:/cygwin64
 - ps: |
     if ($env:PYTHON) {
+      if ($env:PYTHON -eq "27") {
+        pip install numpy==1.10.0
+      }
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
       $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
-      pip install --disable-pip-version-check --user --upgrade pip setuptools six psutil numpy=1.10.0
+      pip install --disable-pip-version-check --user --upgrade pip setuptools six psutil 
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
       if ($env:PLATFORM -eq "x64") { $env:CONDA = "$env:CONDA-x64" }
