--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,12 +24,12 @@ install:
 - ps: Remove-Item -Recurse -Force C:/cygwin64
 - ps: |
     if ($env:PYTHON) {
+      $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
+      pip install --disable-pip-version-check --user --upgrade pip==1.18 setuptools six psutil 
       if ($env:PYTHON -eq "27") {
         pip install numpy==1.10.1
       }
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
-      $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
-      pip install --disable-pip-version-check --user --upgrade pip setuptools six psutil 
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
       if ($env:PLATFORM -eq "x64") { $env:CONDA = "$env:CONDA-x64" }
@@ -39,7 +39,9 @@ install:
       conda update -q conda
       conda install -q conda-build
     }
-- cmd: python --version
+- cmd: |
+    python --version
+    pip --version
 build_script:
 - ps: cd python_bindings
 - cmd: |
