--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ install:
 - ps: |
     if ($env:PYTHON) {
       $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
-      pip install --disable-pip-version-check --upgrade pip setuptools six psutil 
+      pip install --disable-pip-version-check --user --upgrade pip setuptools six psutil 
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
@@ -42,7 +42,7 @@ install:
 build_script:
 - ps: cd python_bindings
 - cmd: |
-    pip install -e .
+    pip install --user -e .
 test_script:
 - cmd: python setup.py test
 
