--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,10 @@ install:
 - ps: |
     if ($env:PYTHON) {
       $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
-      pip install --disable-pip-version-check --user --upgrade pip setuptools six psutil 
+      pip instal --user virtualenv
+      python -m virtualenv -p python venv
+      venv\bin\activate
+      pip install --disable-pip-version-check --upgrade pip setuptools six psutil 
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
@@ -38,11 +41,11 @@ install:
     }
 - cmd: |
     python --version
-    python -m pip --version
+    pip --version
 build_script:
 - ps: cd python_bindings
 - cmd: |
-    python -m pip install -e .
+    pip install -e .
 test_script:
 - cmd: python setup.py test
 
@@ -55,7 +58,7 @@ deploy_script:
     # Workaround required to ensure setup.py finds the .pypirc under Windows
     $env:HOME=$env:USERPROFILE
     # Install wheel-building support
-    python -m pip install --user wheel twine
+    pip install --user wheel twine
     # Build wheel and upload
     python setup.py sdist bdist_wheel
     twine upload -r pypi -p $env:pypipassword --skip-existing dist/*
