--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ install:
       $env:PATH = "C:\Python$env:PYTHON\;C:\Python$env:PYTHON\Scripts\;$env:PATH"
       python -m virtualenv venv
       "venv\\Scripts\\activate"
-      python -m pip install --disable-pip-version-check --upgrade pip setuptools six psutil 
+      python -m pip install --disable-pip-version-check --upgrade pip setuptools six psutil pybind11>=2.2.3 numpy>=1.10.0
       if ($env:PLATFORM -eq "x64") { $env:PYTHON = "$env:PYTHON-x64" }
     } elseif ($env:CONDA) {
       if ($env:CONDA -eq "27") { $env:CONDA = "" }
@@ -44,6 +44,7 @@ install:
 build_script:
 - ps: cd python_bindings
 - cmd: |
+    "venv\\Scripts\\activate"
     python setup.py install
 test_script:
 - cmd: python setup.py test
