--- a/.travis.yml
+++ b/.travis.yml
@@ -114,9 +114,12 @@ install:
   fi
   make -j 4
   $PY -m pip install --upgrade pip
-  travis_wait travis_retry $PIP install scipy six flake8 psutil
-  travis_wait travis_retry $PIP install -r python_bindings/requirements.txt
-  travis_retry cd python_bindings && $PY setup.py build install && cd ..
+  $PIP install scipy six flake8 psutil
+  cd python_bindings
+  $PIP install -r requirements.txt
+  $PY setup.py build_ext
+  $PIP install -U .
+  cd ..
 
 script:
 - $PY --version
