fix deploy script

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -46,12 +46,19 @@ build_script:
     python -m pip install -qq -r requirements.txt
     python setup.py build_ext
     python -m pip install -U .
+- ps: cd ..
+
 test_script:
+- ps: cd python_bindings
 - cmd: python setup.py test
+- ps: cd ..
 
 deploy_script: 
 - ps: |
-    if ($env:APPVEYOR_REPO_BRANCH -ne "master" -or $env:APPVEYOR_REPO_TAG -ne "true") { return }
+    if ($env:APPVEYOR_REPO_TAG -ne "true") {
+      echo "Skipping deployment because this is not a tagged commit"
+      return
+    }
     # Specify account details for PyPI
     echo "Deploying..."
     mv .pypirc $env:USERPROFILE\\.pypirc
@@ -60,7 +67,9 @@ deploy_script:
     # Install wheel-building support
     python -m pip install --user wheel twine
     # Build wheel and upload
+    cd python_bindings
+    python setup.py build_ext
     python setup.py sdist bdist_wheel
-    twine upload -r pypi -p $env:pypipassword --skip-existing dist/*
+    python -m twine upload -r pypi -p $env:pypipassword --skip-existing dist/*
     echo "Deployment complete"
 
