--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ environment:
   global:
     DISTUTILS_USE_SDK: 1
     MSSdk: 1
-    ARCH: /arch:SSE2
+    ARCH: SSE2
   matrix:
   - PYTHON: 27
   - PYTHON: 35
