1. fixing missing dep for Python 2.7 2. updating MANIFEST to try fix source tarball uploaded to pip.

--- a/python_bindings/MANIFEST.in
+++ b/python_bindings/MANIFEST.in
@@ -6,16 +6,12 @@ include LICENSE
 include LICENSE-Apache-2.0
 include tox.ini
 
+recursive-include tensorflow *.cc *.h
+
 recursive-include similarity_search *.cc *.h
 
-global-exclude similarity_search/src/method/lsh.cc
-global-exclude similarity_search/src/method/lsh_multiprobe.cc
-global-exclude similarity_search/src/method/lsh_space.cc
-global-exclude similarity_search/src/method/falconn.cc
-global-exclude similarity_search/src/method/nndes.cc
 global-exclude similarity_search/src/space/space_sqfd.cc
 global-exclude similarity_search/src/main.cc
 
-prune similarity_search/include/falconn
 prune similarity_search/test
-prune similarity_search/lshkit
+prune similarity_search/apps
