--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,8 @@ matrix:
         packages:
         - *core_build
         - python3.8-dev
+        - python3-distutils
+        - python3-lib2to3
   - os: osx
     env: PYTHON=2.7-dev
     osx_image: xcode9.2
